--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_sound: ^9.2.13
   permission_handler: ^10.4.3
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
