--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  path_provider: ^2.1.0
   flutter_sound: ^9.2.13
   permission_handler: ^10.4.3
   avatar_glow: ^2.0.2
