--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_sound: ^9.2.13
   permission_handler: ^10.4.3
   avatar_glow: ^2.0.2
+  localstorage: ^4.0.0+1
 
 dev_dependencies:
   flutter_test:
