--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^10.4.3
   avatar_glow: ^2.0.2
   localstorage: ^4.0.0+1
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
